--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% import "post_macros.html" as post_macros %}
 {%- set title = config.title -%}
-{%- set description = config.description | default() -%}
-{%- set page_icon = config.extra.icon | default() -%}
+{%- set description = config.description | default(value=false) -%}
+{%- set page_icon = config.extra.icon | default(value=false) -%}
 {%- if page and page.title -%}
 {%- set title = page.title ~ ' | ' ~ title -%}
 {%- endif -%}
@@ -49,7 +49,9 @@
         <meta property="og:url" content="{{ get_url(path="/", trailing_slash=true) }}">
         <meta property="og:title" content="{{ title }}">
         <meta property="og:description" content="{{ description }}">
+        {% if page_icon %}
         <meta property="og:image" content="{{ get_url(path=page_icon) }}">
+        {% endif %}
         {% endblock fbmeta %}
 
         {%- block twittermeta -%}
@@ -57,7 +59,9 @@
         <meta name=”twitter:site” content=”@{{ config.extra.twitter }}” />
         <meta name=”twitter:title” content=”{{ title }}” />
         <meta name=”twitter:description” content=”{{ description }}” />
+        {% if page_icon %}
         <meta name=”twitter:image” content=”{{ get_url(path=page_icon) }}” />
+        {% endif %}
         {%- endblock twittermeta -%}
 
         {%- block extra_head -%}
@@ -103,10 +107,10 @@
                             </a>
                         </li>
                         {% endif %}
-                        {% if config.extra.icon %}
+                        {% if page_icon %}
                         <li class="nav">
                             <a href="https://github.com/LunNova">
-                            <img class="icon" src="{{ get_url(path=config.extra.icon) }}" alt="{{ config.extra.icon_alt }}" style="vertical-align:middle" />
+                            <img class="icon" src="{{ get_url(path=page_icon) }}" alt="{{ config.extra.icon_alt }}" style="vertical-align:middle" />
                             </a>
                         </li>
                         {% endif %}
