--- a/templates/index.html
+++ b/templates/index.html
@@ -35,8 +35,16 @@
         <link rel="canonical" href="{{ page_url | safe }}">
 
         {% block feed_link -%}
-        {%- if config.generate_feed -%}
-        <link rel="alternate" type={% if config.feed_filename == "atom.xml" %}"application/atom+xml"{% else %}"application/rss+xml"{% endif %} title="RSS" href="{{ get_url(path=config.feed_filename) | safe }}">
+        {%- if config.generate_feeds %}
+        {%- for feed in config.feed_filenames %}
+        {%- if feed is containing('atom') %}
+        <link rel="alternate" type="application/atom+xml" title="{{ config.title }} Atom Feed" href="{{ get_url(path=feed, trailing_slash=false, lang=lang) | safe }}" />
+        {%- endif %}
+
+        {%- if feed is containing('rss') %}
+        <link rel="alternate" type="application/rss+xml" title="{{ config.title }} RSS Feed" href="{{ get_url(path=feed, trailing_slash=false, lang=lang) | safe }}" />
+        {%- endif %}
+        {%- endfor %}
         {%- endif -%}
         {%- endblock feed_link -%}
 
