--- a/templates/post_macros.html
+++ b/templates/post_macros.html
@@ -2,6 +2,7 @@
     <svg style="margin-bottom:-3px" class="i-clock" viewBox="0 0 32 32"
          width="16" height="16" fill="none" stroke="currentcolor"
          stroke-linecap="round" stroke-linejoin="round" stroke-width="6.25%">
+        <title>Clock icon</title>
         <circle cx="16" cy="16" r="14"/>
         <path d="M16 8 L16 16 20 20"/>
     </svg>
@@ -9,6 +10,7 @@
     <svg style="margin-bottom: -3px" class="i-edit" viewBox="0 0 32 32"
          width="16" height="16" fill="none" stroke="currentcolor"
          stroke-linecap="round" stroke-linejoin="round" stroke-width="6.25%">
+         <title>Edit icon</title>
         <path d="M30 7 L25 2 5 22 3 29 10 27 Z M21 6 L26 11 Z M5 22 L10 27 Z"/>
     </svg>
 
@@ -16,8 +18,9 @@
 {% endmacro meta %}
 
 {% macro page_in_list(page) %}
-    <article itemscope itemtype="http://schema.org/CreativeWork">
+    <article itemscope itemtype="http://schema.org/BlogPosting" itemid="{{ page.permalink | safe }}">
         <header>
+            <link itemprop="url" href="{{ page.permalink | safe }}"/>
             <span class="page-name-link" itemprop="name">
                 <a href="{{ page.permalink | safe }}">{{ page.title }}</a>
             </span>
