theme: make nav li look better

--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -89,8 +89,8 @@ nav {
     text-transform: lowercase;
 }
 
-.nav, address {
-    display: inline;
+.nav, address, nav li {
+    display: inline
 }
 
 .home-link {
