--- a/templates/post_macros.html
+++ b/templates/post_macros.html
@@ -14,7 +14,7 @@
         <path d="M30 7 L25 2 5 22 3 29 10 27 Z M21 6 L26 11 Z M5 22 L10 27 Z"/>
     </svg>
 
-    {% if page.date %}Published: {{ page.date | date(format="%F") }}{% endif %}
+    {% if page.date %}Published: {{ page.date | date(format="%F") }}{% if page.updated %}<span title="Updated: {{ page.updated | date(format='%F') }}">*</span>{% endif %}{% endif %}
 {% endmacro meta %}
 
 {% macro page_in_list(page) %}
