prev/next links and cite block

--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -84,6 +84,10 @@ footer {
     align-items: center;
 }
 
+.next-link {
+    float: right;
+}
+
 nav {
     list-style-type: none;
     text-transform: lowercase;
