--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -47,7 +47,7 @@ $padding: 8px;
 }
 
 body {
-    font: 100% $font;
+    font: 105% $font;
     background: black;
     color: $white;
 }
@@ -149,18 +149,63 @@ main a:visited, footer a:visited {
     color: $luna_hair_stroke;
 }
 
+main {
+    backdrop-filter: blur(10px);
+}
+
+div.content {
+    background-color: #0c0c0c;
+    // border-radius: 1em;
+    box-shadow: 0 0 1em 1em #0d0d0d;
+}
+
+article .article-description {
+    margin-left: 1em;
+}
+
+p {
+    margin: 0 0 1.12em 0;
+}
+
+h1.topline {
+    margin: 0 0 0 0;
+}
+
+h1, h2, h3 {
+    color: #fff;
+}
+
 h1 {
-    font-size: 25px;
-    margin: 5px 0;
+    font-size: 1.75em;
+    margin: 1.5em 0 0 0;
     font-weight: bold;
 }
 
 h2 {
-    font-size: 22px;
+    margin: 1em 0 0 0;
+    font-size: 1.5em;
     font-weight: bold;
 }
 
+h2:after, h3:after {
+    content: "";
+    display: block;
+    margin: 0 0 1px 0;
+    padding: 0 0 0 0;
+    margin-right: 33%;
+    color: #224;
+    background-color: #224;
+    height: 3px;
+}
+
+
+h3:after {
+    margin-right: 67%;
+    height: 2px;
+}
+
 h3 {
+    margin: 0.75em 0 0 0;
     font-size: 19px;
     font-weight: bold;
 }
@@ -192,7 +237,7 @@ code {
 
 p > code {
     font-weight: bold;
-    color: $gray;
+    color: $blue_light;
 }
 
 .date {
@@ -230,15 +275,29 @@ img {
     max-width: 100%;
 }
 
+p:has(+ hr) {
+    margin: 0 0 0.62em 0;
+}
+
+footer hr {
+     height: 0.5em;
+}
+
 hr {
     color: $luna_body_fill;
     background-color: $luna_body_fill;
-    height: 0.5em;
+    height: 0.25em;
+    margin: 0.5em 0 0.5em 0;
 }
 
 hr.small {
     height: 0.2em;
 }
+
+hr + p, hr + blockquote {
+    margin-top: 0;
+}
+
 
 pre[data-lang] {
     background-color: midnightblue !important;
