templates: remove Copyright text, &copy; is sufficient

--- a/templates/index.html
+++ b/templates/index.html
@@ -202,7 +202,7 @@
             <hr>
             <div class="footer">
                 <small class="footer-left">
-                    Copyright &copy; {{ config.extra.author }} {% if config.extra.license %} {{ config.extra.license | safe }} {% endif %}
+                    &copy; {{ config.extra.author }} {% if config.extra.license %} {{ config.extra.license | safe }} {% endif %}
                 </small>
                 <small class="footer-right">
                     {%- if page and page.title -%}
